modification titre principal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Recettes</title>
 </head>
 <body>
-    <h1>Nos Recettes</h1>
+    <h1>Bienvenue sur notre livre de recettes</h1>
 </body>
 </html>
